--- a/app.config
+++ b/app.config
@@ -6,11 +6,11 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Skrlin.My.MySettings.dubravaConnectionString" connectionString="Data Source=localhost;Initial Catalog=dubrava;Persist Security Info=True;User ID=sa;Password=1502t"
+        <add name="Skrlin.My.MySettings.dubravaConnectionString" connectionString="Data Source=localhost;Initial Catalog=dubrava;Persist Security Info=True;User ID=sa;Password="
             providerName="System.Data.SqlClient" />
-        <add name="Skrlin.My.MySettings.ŠkrlinConnectionString" connectionString="Data Source=localhost;Initial Catalog=Škrlin;Persist Security Info=True;User ID=sa;Password=1502t"
+        <add name="Skrlin.My.MySettings.ŠkrlinConnectionString" connectionString="Data Source=localhost;Initial Catalog=Škrlin;Persist Security Info=True;User ID=sa;Password="
             providerName="System.Data.SqlClient" />
-        <add name="Skrlin.My.MySettings.dubravaConnectionString1" connectionString="Data Source=localhost\;Initial Catalog=dubrava;Persist Security Info=True;User ID=sa;Password=1502t"
+        <add name="Skrlin.My.MySettings.dubravaConnectionString1" connectionString="Data Source=localhost\;Initial Catalog=dubrava;Persist Security Info=True;User ID=sa;Password="
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.diagnostics>
